# rodent

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml
dbus/bluez/: manifest.json
dbus/bluez/interfaces/: org.bluez.Adapter1.xml  org.bluez.AdvertisementMonitorManager1.xml  org.bluez.AgentManager1.xml  org.bluez.BatteryProviderManager1.xml  org.bluez.Bearer.BREDR1.xml  org.bluez.Bearer.LE1.xml  org.bluez.Device1.xml  org.bluez.GattCharacteristic1.xml  org.bluez.GattDescriptor1.xml  org.bluez.GattManager1.xml  org.bluez.GattService1.xml  org.bluez.LEAdvertisement1.xml  org.bluez.LEAdvertisingManager1.xml  org.bluez.Media1.xml  org.bluez.MediaControl1.xml  org.bluez.Network1.xml  org.bluez.NetworkServer1.xml  org.bluez.ProfileManager1.xml  org.freedesktop.DBus.Introspectable.xml  org.freedesktop.DBus.ObjectManager.xml  org.freedesktop.DBus.Properties.xml
dbus/bluez/raw/: org_bluez.xml  org_bluez_hci0.xml  org_bluez_hci0_dev_A4_A4_90_78_F5_39.xml  org_bluez_hci0_dev_EC_E5_6D_E7_9D_E9.xml  root.xml
src/bluetooth/: MgmtAdvertiser.cpp  MgmtAdvertiser.h
src/bluez/: BluezClient.cpp  BluezClient.h  GattServer.cpp  GattServer.h
src/clipboard/: ClipboardWatcher.cpp  ClipboardWatcher.h
src/hid/: HidReports.cpp  HidReports.h
src/input/: EvdevInputReader.cpp  EvdevInputReader.h
src/runtime/: RuntimeConfig.cpp  RuntimeConfig.h
tools/: refresh_bluez_codegen.py  send_test_frames.py
